Fixed input fields spilling offscreen on mobile v2

--- a/src/components/ProjectView.module.css
+++ b/src/components/ProjectView.module.css
@@ -181,7 +181,7 @@
     max-width: 100%;
   }
   .head input.title {
-    width: calc(100% - 1rem);
+    width: calc(100% - 2rem);
   }
   .head .right-column {
     float: none;
